--- a/src/components/services/services.css
+++ b/src/components/services/services.css
@@ -33,7 +33,7 @@ cursor: pointer;
     margin-bottom: 5vh;
     }
     .Services span{
-        color: #E55300;
+        color: #E8ED07E5;
     }
 .ServiceCard h1{
 font-size: 14px;
