--- a/src/components/Complaint Portals/portals.css
+++ b/src/components/Complaint Portals/portals.css
@@ -8,16 +8,16 @@
   .Portal-content-card {
     display: inline-block;
     position: relative;
-    width: 400px;
-    height:400px;
+    width: 150px;
+    height:150px;
     margin: 5px;
     border-radius: 5px;
-    background-color:#e554006c;
+    background-color:#e9ed0764;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
     transition: 500ms linear;
   }
   .Portal-content-card:hover{
-    background-color: #E55300;
+    background-color: #E8ED07E5;
 transform: scale(1.01);
 cursor: pointer;
   }
@@ -29,5 +29,5 @@ cursor: pointer;
     margin-bottom: 5vh;
     }
     .Portal span{
-        color: #E55300;
+        color: #E8ED07E5;
     }
