--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -18,7 +18,7 @@ height: 10vh;
 }
 .pre-nav{
     height: 5vh;
-    background-color: #E55300;
+    background-color: #E8ED07E5;
     width: 100%;
     display: flex;
     align-items: center;
@@ -31,7 +31,7 @@ height: 10vh;
 }
 
 .navbar {
-  background-color: #fef7e5;
+  /* background-color: #fef7e5; */
   position: relative;
 }
 
@@ -128,7 +128,7 @@ height:8vh;
     box-shadow: 3px 3px 6px #666666;
     color: #ffffff;
     font-size: 20px;
-    background: #E55300;
+    background: #E8ED07E5;
     border: 0px solid black;
     padding: 10px 20px 10px 20px;
     text-decoration: none;
