--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -3,7 +3,7 @@ margin-top: 100px;
 }
 .Footer-main{
     border-top-left-radius: 100px;
-    background: #E8ED07;
+    background: #43DD64;
     padding: 150px 150px 50px 150px;
     display: flex;
     justify-content: space-between;
