--- a/src/components/Complaint Portals/portals.css
+++ b/src/components/Complaint Portals/portals.css
@@ -8,26 +8,53 @@
   .Portal-content-card {
     display: inline-block;
     position: relative;
-    width: 150px;
-    height:150px;
+    width: 200px;
+    height:200px;
     margin: 5px;
+    padding: 10px;
     border-radius: 5px;
-    background-color:#e9ed0764;
+    border: 1px solid black;
+    /* background-color:#d5ffde; */
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
-    transition: 500ms linear;
+    transition: 100ms linear;
   }
   .Portal-content-card:hover{
-    background-color: #E8ED07E5;
+    background-color: #bef0c9;
 transform: scale(1.01);
 cursor: pointer;
   }
  
-  .Portal p{
+  .Portal> p{
     text-align: center;
     font-size: 5rem;
     font-weight: 700;
     margin-bottom: 5vh;
     }
-    .Portal span{
+    .Portal > span{
         color: #E8ED07E5;
+    }
+    
+    .Portal-content-card p{
+     
+      color: #31A049;
+text-align: center;
+font-family: Arimo Hebrew Subset;
+font-size: 2em;
+font-style: normal;
+font-weight: 700;
+line-height: normal;
+    }
+    .Portal-content-card img{
+    height: 40px;
+    width: 40px;
+    }
+    .Portal-content-card div{
+      height: 100%;
+      width: 100%;
+      display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: space-between;
+    
+      
     }
