--- a/src/components/Complaint Form/Form.css
+++ b/src/components/Complaint Form/Form.css
@@ -95,8 +95,8 @@
 .city-Portal-card {
     display: inline-block;
     position: relative;
-    width: 150px;
-    height:150px;
+    width: 180px;
+    height:180px;
     margin: 5px;
     padding: 5px;
     border-radius: 5px;
@@ -104,27 +104,45 @@
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
     transition: 100ms linear;
 }
-.city-Portal-card:hover{
+/* .city-Portal-card:hover{
     background-color: #bef0c9;
 transform: scale(1.01);
 cursor: pointer;
-}
-
-.city-Portal-card p{
-color: #31A049;
-/* text-align: center; */
-font-family: Arimo Hebrew Subset;
-font-size: 1.1rem;
-font-style: normal;
-font-weight: 600;
-line-height: normal;
-margin-top: 60px;
-
-}
+} */
 .city-Portal-card img{
-    height: 150px;
-    width: 150px;
+    height: 180px;
+    width: 180px;
+    opacity: 1;
+    display: block;
+    transition: .5s ease;
+    backface-visibility: hidden;
 }
+.middle {
+    transition: .5s ease;
+    opacity: 0;
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    -ms-transform: translate(-50%, -50%);
+    text-align: center;
+}
+.city-Portal-card:hover img {
+    opacity: 0.3;
+    cursor: pointer;
+  }
+.city-Portal-card:hover .middle {
+    opacity: 1;
+}
+.text {
+    background: rgba(0,0,0,0.5);
+    color: #31A049;
+    font-size: 28px;
+    padding: 6px 12px;
+    font-weight: 700;
+    font-family: Arimo Hebrew Subset;
+
+  }
 /* File complaint Fields */
 .file-complaint-fields{
     margin-top: 70px;
@@ -134,15 +152,12 @@ margin-top: 60px;
     text-align: center;
 }
 .complain-file{
-    background: #31A049;
-    width: 35%;
+    background: #13124E;
+    width: 75%;
     padding: 2%;
     font-size: 1.5rem;
-    color: #0C0B4B;
+    color: #43DD64;
     font-weight: 600;
-}
-.complain-file a{
-    color: #0C0B4B;
 }
 .not-city{
     color: #31A049;
