--- a/src/components/Complaint Portals/portals.css
+++ b/src/components/Complaint Portals/portals.css
@@ -14,7 +14,7 @@
     padding: 10px;
     border-radius: 5px;
     border: 1px solid black;
-    /* background-color:#d5ffde; */
+    background: #FFFCFC;
     box-shadow: 0px 10px 15px -3px rgba(0,0,0,0.1),0px 10px 15px -3px rgba(0,0,0,0.1);
     transition: 100ms linear;
   }
@@ -22,6 +22,9 @@
     background-color: #bef0c9;
 transform: scale(1.01);
 cursor: pointer;
+  }
+  .Portal-content-card :Link{
+    text-decoration: none;
   }
  
   .Portal> p{
@@ -39,14 +42,15 @@ cursor: pointer;
       color: #31A049;
 text-align: center;
 font-family: Arimo Hebrew Subset;
-font-size: 2em;
+font-size: 1.8rem;
 font-style: normal;
 font-weight: 700;
 line-height: normal;
     }
     .Portal-content-card img{
-    height: 40px;
-    width: 40px;
+    height: 55px;
+    width: 55px;
+    padding: 10px 0px;
     }
     .Portal-content-card div{
       height: 100%;
@@ -54,7 +58,5 @@ line-height: normal;
       display: flex;
       flex-direction: column;
       align-items: center;
-      justify-content: space-between;
-    
-      
+      margin-top: 25px;
     }
