--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -4,13 +4,12 @@ body {
   margin: 0;
   padding: 0;
   font-family: 'Poppins', sans-serif;
-  background-color: #fcfcfc;
 }
 
 .container {
 height: 10vh;
   margin: 0 auto;
-  padding: 0 15px;
+  padding: 10px 30px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -53,7 +52,7 @@ height:8vh;
 }
 
 .nav-elements ul li:not(:last-child) {
-  margin-right: 60px;
+  margin-right: 40px;
 }
 
 .nav-elements ul a {
