--- a/src/components/Complaint Form/Form.css
+++ b/src/components/Complaint Form/Form.css
@@ -13,7 +13,7 @@
     border: 1px solid #0C0B4B;
     text-align: center;
     padding: 3%;
-    background: #FFF8F2;
+    background: #FFF;
     width: 40%;
 }
 .form-fields> h3{
