--- a/src/components/File Complaints/Complaint.css
+++ b/src/components/File Complaints/Complaint.css
@@ -1,20 +1,22 @@
 .Complaint-main{
     margin-top: 15vh;
-    background: #43DD64;
+    background: rgb(12,11,75);
+background: linear-gradient(90deg, rgba(12,11,75,1) 35%, rgba(49,160,73,1) 76%);
     width: 100%;
     height: 50vh;
     text-align: center;
+    color: #fff;
 }
 .Complaint-main> p{
-    padding: 8%;
+    padding: 6%;
     text-align: center;
     font-size: 3.5rem;
     font-weight: 600;
-    margin-bottom: 5vh;
-    line-height: 50px;
+    /* margin-bottom: 5vh; */
+    line-height: 60px;
     }
 
 .Complaint-main> p> a{
-    color: #000;
+    color: #fff;
 
 } 
