--- a/src/components/Modal/modal.css
+++ b/src/components/Modal/modal.css
@@ -5,7 +5,7 @@
     border: none;
     text-decoration: underline;
     cursor: pointer;
-    color: #43DD64;
+    color: #fff;
 }
 .modal-close{
     background: none;
