--- a/src/components/Offers/offer.css
+++ b/src/components/Offers/offer.css
@@ -87,3 +87,27 @@
     font-weight: 700;
     font-family: Arial, Helvetica, sans-serif;
 }
+@media (max-width: 600px) and (max-width: 768px) {
+    .header-offer h1{
+        font-size: 2.5rem;
+    }
+    .side-cards{
+        width: 50vw;
+        height: auto;
+        margin: 5px 50px;
+    }
+    .offer-cards{
+        display: block;
+
+    }
+    .mid-card{
+        width: 60vw;
+        height: auto;
+        margin: 5px 30px;
+    }
+    .button-started button{
+        height: 4vh;
+        width: 50vw;
+        margin-top: 20px;
+    }
+}
