--- a/src/components/Why Choose Us/whychooseus.css
+++ b/src/components/Why Choose Us/whychooseus.css
@@ -31,3 +31,25 @@
 .govt> img{
     width: 60px;
 }
+@media (max-width: 600px) and (max-width: 768px) {
+    .header-choose h1{
+        font-size: 2.5rem;
+    }
+    .content-whychoose{
+        display: block;
+    }
+    .govt{
+        margin-top: 25px;
+    }
+    .govt h1{
+        font-size: 20px;
+    }
+    .content2{
+        display: block;
+        margin: 0px 0vw;
+        width: 100%;
+    }
+    .whychooseus{
+        margin: 30px 0vw;
+    }
+}
