--- a/src/pages/Complaint Portal/complaintportal.css
+++ b/src/pages/Complaint Portal/complaintportal.css
@@ -11,7 +11,7 @@ background: linear-gradient(90deg, rgba(12,11,75,1) 35%, rgba(49,160,73,1) 76%);
 .choose-complaint{
     margin-top: 80px;
 }
-@media (max-width: 600px) and (max-width: 768px) {
+@media (max-width: 768px) {
     .complaint-portal-main{
         display: block;
     }
