--- a/src/components/Complaint Portals/portals.css
+++ b/src/components/Complaint Portals/portals.css
@@ -60,7 +60,7 @@ line-height: normal;
       align-items: center;
       margin-top: 25px;
     }
-@media (max-width: 600px) and (max-width: 768px) {
+@media (max-width: 768px) {
   .Portal p{
     font-size: 3rem;
   }
