--- a/src/components/Footer/footer.css
+++ b/src/components/Footer/footer.css
@@ -106,7 +106,7 @@ width: 30%;
     text-align: center;
     font-weight: 600;
 }
-@media (max-width: 600px) and (max-width: 768px) {
+@media (max-width: 768px) {
    .Footer-main{
     flex-direction: column;
     padding: 10px;
