--- a/src/components/Why Choose Us/whychooseus.css
+++ b/src/components/Why Choose Us/whychooseus.css
@@ -31,7 +31,7 @@
 .govt> img{
     width: 60px;
 }
-@media (max-width: 600px) and (max-width: 768px) {
+@media (max-width: 768px) {
     .header-choose h1{
         font-size: 2.5rem;
     }
