--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -110,7 +110,7 @@
     padding: 20px 20px;
     font-size: 1.5vw;
 }
-@media (max-width: 600px) and (max-width: 768px) {
+@media (max-width: 768px) {
     .About-flex img{
         height: 100%;
     }
