--- a/src/Admin/Login/login.css
+++ b/src/Admin/Login/login.css
@@ -77,3 +77,12 @@
     border-radius: 8px;
     cursor: pointer;
 }
+@media (max-width:  768px) {
+  .inputBox{
+    width: auto;
+  }
+  .mainContainer{
+    margin-left: 20%;
+  }
+  
+}
