--- a/src/Admin/Police Com/pcomplaint.css
+++ b/src/Admin/Police Com/pcomplaint.css
@@ -1,31 +1,46 @@
-.Admin{
-    background: rgb(12,11,75);
-    background: linear-gradient(90deg, rgba(12,11,75,1) 35%, rgba(49,160,73,1) 76%);
-}
-.Admin-header{
+.Admin {
+    height: 100%;
+    background: rgb(12, 11, 75);
+    background: linear-gradient(
+      90deg,
+      rgba(12, 11, 75, 1) 35%,
+      rgba(49, 160, 73, 1) 76%
+    );
+  }
+  .Admin-header {
     text-align: center;
-}
-.Admin-header> h1{
+  }
+  .Admin-header > h1 {
     color: #fff;
     font-size: 3rem;
     padding: 20px;
-}
-.table{
-    display: flex;
-    justify-content: center;
-}
-.table> table{
+  }
+  .table {
+  }
+  .table > table {
     padding: 0px 20px;
-}
-table{
-    
-}
-th{
-    padding: 10px 30px;
+  }
+  th {
+    padding: 20px 28px;
     color: #fff;
     font-size: 1.5rem;
-}
-td{
+    border-bottom: 2px solid #fff;
+  }
+  td {
+    border-bottom: 1px solid #fff;
+    padding: 10px 0px;
     font: 1rem;
     color: #fff;
-}
+  }
+  @media (max-width: 768px) {
+    .table{
+      display: none;
+    }
+  
+  }
+  @media (min-width: 768px) {
+    .res{
+      display: none;
+    }
+    
+  }
