--- a/src/components/Complaint Portals/portals.css
+++ b/src/components/Complaint Portals/portals.css
@@ -60,6 +60,36 @@ line-height: normal;
       align-items: center;
       margin-top: 25px;
     }
+    .middle-portal {
+      transition: .5s ease;
+      opacity: 0;
+      position: absolute;
+      top: 30%;
+      left: 50%;
+      transform: translate(-50%, -50%);
+      -ms-transform: translate(-50%, -50%);
+      text-align: center;
+      line-break: anywhere;
+  }
+  .con:hover img {
+      opacity: 0.3;
+      cursor: pointer;
+    }
+  .con:hover .middle-portal {
+      opacity: 1;
+      padding: 5px;
+
+  }
+  .text-links {
+      /* background: rgba(0,0,0,0.2); */
+      color: black;
+      font-size: 28px;
+      padding: 40% 0px;
+      text-decoration: underline;
+      /* font-weight: 700; */
+      font-family: Arimo Hebrew Subset;
+  
+    }
 @media (max-width: 768px) {
   .Portal p{
     font-size: 3rem;
