--- a/src/index.css
+++ b/src/index.css
@@ -1,16 +1,15 @@
+@import url('https://fonts.cdnfonts.com/css/abhaya-libre');
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+  font-family: 'Abhaya Libre';
  
 }
 *{
   margin: 0;
 }
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+  font-family: 'Abhaya Libre';
 }
