--- a/src/components/Complaint Portals/portals.css
+++ b/src/components/Complaint Portals/portals.css
@@ -8,10 +8,10 @@
   .Portal-content-card {
     display: inline-block;
     position: relative;
-    width: 200px;
-    height:200px;
-    margin: 5px;
-    padding: 10px;
+    width: 160px;
+    height:160px;
+    margin: 6px;
+    padding: 15px;
     border-radius: 5px;
     border: 1px solid black;
     background: #FFFCFC;
@@ -29,9 +29,11 @@ cursor: pointer;
  
   .Portal> p{
     text-align: center;
-    font-size: 4rem;
+    font-size: 3.5rem;
     font-weight: 600;
     margin-bottom: 5vh;
+    text-decoration: underline #0C0B4B;
+    color: #0C0B4B;
     }
     .Portal > span{
         color: #E8ED07E5;
@@ -53,12 +55,12 @@ line-height: normal;
     padding: 10px 0px;
     }
     .Portal-content-card div{
-      height: 100%;
+      height: auto;
       width: 100%;
       display: flex;
       flex-direction: column;
       align-items: center;
-      margin-top: 25px;
+      /* margin-top: 25px; */
     }
     .middle-portal {
       transition: .5s ease;
@@ -81,14 +83,15 @@ line-height: normal;
 
   }
   .text-links {
-      /* background: rgba(0,0,0,0.2); */
-      color: black;
+      background: #0C0B4B;
+      color: #fff;
       font-size: 28px;
-      padding: 40% 0px;
+      padding: 50px 0px;
       text-decoration: underline;
       /* font-weight: 700; */
       font-family: Arimo Hebrew Subset;
-  
+      width: 100%;
+      height: 50vh;
     }
 @media (max-width: 768px) {
   .Portal p{
