--- a/src/pages/About/about.css
+++ b/src/pages/About/about.css
@@ -1,6 +1,5 @@
 .About{
     padding: 0px 0vw;
-    background: #FFFCFC;
     font-weight: 400;
     font-size: 24px;
 }
@@ -19,7 +18,7 @@
     width: 70vw;
 }
 .About-flex{
-    margin-top: 50px;
+    margin-top: 40px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -32,7 +31,7 @@
     text-align: center;
     padding: 30px;
    background-color:  rgba(67, 221, 100, 0.80);;
-   width: 30vw;
+   width: 40vw;
 }
 .About-services{
     text-align: center;
@@ -48,12 +47,18 @@
     flex-direction: column;
     align-items: center;
     background: #FFF9F9;
-    width: 20vw;
+    width: 25vw;
     padding: 20px;
     font-size: 1.25rem;
     line-height: 30px;
     line-break: anywhere;
-    border: 2px solid rgba(67, 221, 100, 0.80);;
+    /* border: 2px solid rgba(67, 221, 100, 0.80);; */
+    background:
+    linear-gradient(#FEFAFA, #FEFAFA) 50% 50%/calc(100% - 16px) calc(100% - 16px) no-repeat,
+    linear-gradient(#FEFAFA, #FEFAFA) 50% 50%/calc(100% - 10px) calc(100% - 10px) no-repeat,
+    linear-gradient(90deg, #0c0b4b 20%, #31A049 60%, #31A049 94%);
+    box-sizing: border-box;
+
 }
 .About-why-us{
     width: 100%;
