--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -9,12 +9,13 @@ justify-content: space-between;
 align-items: center;
 padding: 0px 5vw;
 margin-bottom: 50px;
-border-bottom: 3px solid #2f2f48;
+/* border-bottom: 3px solid #2f2f48; */
 }
 .Home-main p{
 font-size: 3.8rem;
 font-weight: 700;
 line-height: 70px;
+color: #0C0B4B;
 }
 .Home-main span{
     color: #31A049;
@@ -28,15 +29,23 @@ line-height: 70px;
 }
 .About-home{
     text-align: center;
-    margin-bottom: 100vh;
+    /* margin-bottom: 100vh; */
+    padding: 50px;
     
 }
 .About-home> h1{
     font-size: 4rem;
     font-weight: 600;
+    text-decoration: underline #0C0B4B;
+    margin-bottom: 20px;
+    color: #0C0B4B;
 }
 .About-home>h1> span{
     color: #31A049;
+    text-decoration: underline #31A049;
+}
+.About-home> p{
+    font-size: 1.8rem;
 }
 @media (max-width: 768px) {
     .Home-main{
