--- a/src/pages/404/NotFoundPage.css
+++ b/src/pages/404/NotFoundPage.css
@@ -1,5 +1,3 @@
-/* NotFoundPage.css */
-
 .not-found-container {
   display: flex;
   flex-direction: column;
@@ -11,11 +9,41 @@
   h1 {
     font-size: 8em;
     margin-bottom: 10px;
-    color: #e74c3c; /* Red color */
+    color: #31a049; /* Red color */
   }
 
   p {
     font-size: 1.5em;
     color: #555;
+  }
+}
+
+.fadeIn {
+  opacity: 0;
+  animation: fadeInAnimation 1s ease-in-out forwards;
+}
+
+@keyframes fadeInAnimation {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: 1;
+  }
+}
+
+.go-home-button {
+  margin-top: 20px;
+  padding: 10px 20px;
+  font-size: 1.2em;
+  background-color: #0c0b4b7e; /* Blue color */
+  color: #fff;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+  transition: background-color 0.3s ease-in-out;
+
+  &:hover {
+    background-color: #0c0b4b; /* Darker blue color on hover */
   }
 }
