--- a/src/components/Complaint Form/Form.css
+++ b/src/components/Complaint Form/Form.css
@@ -142,7 +142,7 @@ cursor: pointer;
 } */
 .city-Portal-card img{
     height: 180px;
-    width: 180px;
+    /* width: 180px; */
     opacity: 1;
     display: block;
     transition: .5s ease;
@@ -166,8 +166,8 @@ cursor: pointer;
     opacity: 1;
 }
 .text {
-    background: rgba(0,0,0,0.5);
-    color: #31A049;
+    background: rgba(0,0,0,0.8);
+    color: #fff;
     font-size: 28px;
     padding: 6px 12px;
     font-weight: 700;
