--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -28,13 +28,14 @@ color: #0C0B4B;
     margin-bottom: 5vh;
 }
 .About-home{
-    text-align: center;
+    /* text-align: center; */
     /* margin-bottom: 100vh; */
     padding: 50px;
     
 }
 .About-home> h1{
     font-size: 4rem;
+    text-align: center;
     font-weight: 600;
     text-decoration: underline #0C0B4B;
     margin-bottom: 20px;
@@ -45,7 +46,10 @@ color: #0C0B4B;
     text-decoration: underline #31A049;
 }
 .About-home> p{
-    font-size: 1.8rem;
+    font-size: 1.7rem;
+    line-break: auto;
+    text-align: justify;
+
 }
 @media (max-width: 768px) {
     .Home-main{
