--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -28,6 +28,7 @@ height: 10vh;
 }
 .pre-nav-contact p{
     padding: 10px;
+    font-size: 16px;
 }
 
 .navbar {
@@ -68,21 +69,21 @@ height:8vh;
   margin-right: 40px;
 }
 
-.nav-elements ul a {
-  font-size: 20px;
+.nav-elements ul li a {
+  font-size: 25px;
   font-weight: 500;
-  color: #2f234f;
+  color: #0C0B4B;
   text-decoration: none;
 
 }
 
-.nav-elements ul a.active {
-  color: #574c4c;
+.nav-elements ul li a.active {
+  color: #0C0B4B;
   font-weight: 600;
   position: relative;
 }
 
-.nav-elements ul a.active::after {
+.nav-elements ul li a.active::after {
   content: '';
   position: absolute;
   bottom: -4px;
