--- a/src/components/Why Choose Us/whychooseus.css
+++ b/src/components/Why Choose Us/whychooseus.css
@@ -7,7 +7,7 @@
     margin-top: 50px;
 }
 .header-choose> h1{
-    font-size: 3.5rem;
+    font-size: 4rem;
     color: #0C0B4B;
     text-decoration: underline #0C0B4B;
 }
@@ -21,12 +21,12 @@
 }
 .content2{
     /* width: 30vw; */
-    margin: 80px 0;
+    margin: 100px 0;
     display: flex;
     justify-content: space-between;
 }
 .govt> h1{
-    line-height: 30px;
+    line-height: auto;
     font-size: 2rem;
     font-weight: 600;
 }
