--- a/src/pages/Complaint Portal/complaintportal.css
+++ b/src/pages/Complaint Portal/complaintportal.css
@@ -1,6 +1,7 @@
 .complaint-portal-main{
     background: rgb(12,11,75);
 background: linear-gradient(90deg, rgba(12,11,75,1) 35%, rgba(49,160,73,1) 76%);
+margin-bottom: 50px;
 }
 .complaint-portal-main> h1{
     color: white;
