--- a/src/pages/Complaint Portal/complaintportal.css
+++ b/src/pages/Complaint Portal/complaintportal.css
@@ -20,7 +20,8 @@ margin-bottom: 50px;
         font-size: 2.6rem;
     }
     .form-fields{
-        width: 80%;
-        padding: 3% 10%;
+        width: 100%;
+        /* padding: 3% 10%; */
+        
     }
 }
